AC_INIT(expandMailList.c)
PRODUCT=expandMailList
VERSION=1.0
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_FUNC(ldap_initialize, ,AC_CHECK_LIB(ldap, ldap_initialize, ,AC_MSG_ERROR([can't find ldap_initialize()])))
AC_CHECK_FUNC(ber_init, ,AC_CHECK_LIB(lber, ber_init, ,AC_MSG_ERROR([can't find ber_init()])))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h ldap.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
